site/src/components/icon-preview/IconPreview.module.css
.root {
  min-height: 400px;
}

.formfield {
  display: flex;
}

.iconName {
  text-wrap: none;
  text-align: center;
}

.search {
  max-width: 40ch;
  flex: 1;
}

.iconCard {
  padding-top: var(--salt-spacing-300);
  padding-inline: var(--salt-spacing-25);
  height: calc(var(--salt-size-base) * 4);
  aspect-ratio: 1.1;
}

.iconContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: calc(var(--salt-size-icon) * 2);
}

.notFound {
  flex: 1;
  justify-content: center;
}

.iconCount {
  display: flex;
  align-items: center;
}

